# TrackProof

./: .env.example  .gitignore  Architettura-tecnica-v1.md  CLAUDE.md  PRD-live-detection.md  Piano-implementazione-v1.md  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  db.py  fingerprinting.py  main.py  migrations.py  repository.py
backend/migrations/: 001_tabelle_fase1.sql
backend/scripts/: fingerprint_file.py
backend/tests/: conftest.py  test_fingerprint_persistence.py  test_fingerprinting.py  test_health.py  test_migrations.py
